$Id: CHANGES,v 1.38 2000/01/26 11:38:07 stelian Exp $

Changes between versions 0.4b13 and 0.4b14 (released ????????????????)
======================================================================

1.	Fixed a bug in dump which may have caused invalid deleted 
	directories to be dumped out if they were deleted after the
	mapping pass. This could occure on active filesystem and lead
	to heap corruption (causing dump malfunction in many possible ways).
	Thanks to Jan Sanislo <oystr@cs.washington.edu> for finding this
	bug and submitting the patch.

2.	Fixed the handling of the filesystem parameter in dump. A
	'/mnt/disk' parameter caused the disk contents to be dumped,
	but a '/mnt/disk/' parameter caused the mountpoint directory
	to be dumped (generally an empty directory).

3.	Improved the output of dump in order to tell which directory
	it is currently dumping (when dumping a subtree).

Changes between versions 0.4b12 and 0.4b13 (released January 21, 2000)
======================================================================

1.	Small Y2K fix in the man pages :). Thanks to Bernhard Sadlowski
	<sadlowsk@Mathematik.Uni-Bielefeld.DE> for reporting the bug.

2.	Removed the requirement to build the RPM as root from the
	spec file. Thanks to Christian Weisgerber 
	<naddy@mips.rhein-neckar.de> for submitting this.

3.	Fixed a bug in dump related to the 'filetype' feature of ext2fs,
	causing dump to block when dumping really huge filesystems.
	Many thanks to Patrik Schindler <poc@pocnet.net> for 
	helping me find this bug.

4.	Fixed the treatment for an interrupt signal when dump access
	the remote tape through RSH. Thanks to Christian Weisgerber
	<naddy@mips.rhein-neckar.de> for providing the patch.

5.	Fixed a bug which was causing dump/restore to display
	garbage characters instead of the remote host name.

Changes between versions 0.4b11 and 0.4b12 (released January 8, 2000)
=====================================================================
